deleting old and unused code

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -197,30 +197,8 @@
   </div>
 </div>
 
-
-{% comment %}
-<!-- Hero Photo Split -->
-<div class="container content herodiv" style="padding-top: 5px; margin-top: 5px;">
-<div class="herodiv-eight eight columns alpha">
-<a id="Hero1_Href" href="collections/all-products" class="image-link">
-<div class="hero-image hero-alpha">
-<img id="Hero1_Img" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Hero_Placeholder.jpg?4859436576700014850" alt="">
-<div class="hero-overlay">
-      <h1 id="Hero1_H1"></h1>
-      <p id="Hero1_P"></p>
-      <span id="Hero1_Button" class="rbutton"></span>
-</div></div></a></div>
-
-<div class="herodiv-eight eight columns omega">
-<a id="Hero2_Href" href="/pages/about-us" class="image-link">
-<div class="hero-image hero-omega">
-<img id="Hero2_Img" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Hero_Placeholder.jpg?4859436576700014850" alt="">
-<div class="hero-overlay">
-      <h1 id="Hero2_H1"></h1>
-  		<p id="Hero2_P"></p>
-  		<span id="Hero2_Button" class="rbutton"></span>
-</div></div></a></div></div>
-{% endcomment %}
+<!-- Press references -->
+{% include 'snippet-homepage--featured_in' %}
 
 <script>
 // Define JavaScript for each page variation of this experiment.
@@ -271,258 +249,6 @@ var pageVariations = [
 );
 </script>
 
-{% comment %}
-<!-- ********************
-     Blue Bar *********** -->
-<!--
-<div class="blue_bar">
-   // pages.whats-unique-about-little-lotus.content //
-    <div class="container">{% include 'homepage-featured' %}</div>
-</div>
--->
-{% endcomment %}
-
-{% comment %}
-<div class="container content" style="padding-top: 30px; padding-bottom: 30px">
-
-<!-- 3 Feature Images (Template -->
-<div class="container content" style="padding-top: 20px">
-{% if settings.featured_links %}
-  <div class="sixteen columns featured_links">
-    <div class="section clearfix">
-      <div class="one-third column alpha">
-        <a href="{{ settings.feature1_link }}">
-          <div class="image_container">
-            <img src="{{ 'feature1.jpg' | asset_url }}" alt="{{ settings.feature1_text }}" />
-            {% if settings.feature1_text != blank %}<span class="feature-text">{{ settings.feature1_text }}</span>{% endif %}
-          </div>
-        </a>
-      </div>
-
-      <div class="one-third column">
-        <a href="{{ settings.feature2_link }}">
-          <div class="image_container">
-            <img src="{{ 'feature2.jpg' | asset_url }}" alt="{{ settings.feature2_text }}" />
-            {% if settings.feature2_text != blank %}<span class="feature-text">{{ settings.feature2_text }}</span>{% endif %}
-          </div>
-        </a>
-      </div>
-
-      <div class="one-third column omega">
-        <a href="{{ settings.feature3_link }}">
-          <div class="image_container">
-            <img src="{{ 'feature3.jpg' | asset_url }}" alt="{{ settings.feature3_text }}" />
-            {% if settings.feature3_text != blank %}<span class="feature-text">{{ settings.feature3_text }}</span>{% endif %}
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-{% endif %}
-
-</div>
-
-<!-- Our Video -->
-<div class="container content"  style="padding-top: 0px; padding-bottom: 0px">
-<div class="sixteen columns">
-<div class="section clearfix">
-  <H4 style="text-align: center">Watch our video</H4>
-<!-- <div class="embed-container"><iframe src="https://player.vimeo.com/video/149678109?title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe></div>  -->
-<div class="desktop_only_block" style="text-align: center; width: 100%;"><iframe src="https://player.vimeo.com/video/149678109?title=0&amp;byline=0&amp;portrait=0" width="540" height="270" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe></div>
-<div class="mobile_only_block" style="text-align: center; width: 100%;"><iframe src="https://player.vimeo.com/video/149678109?title=0&amp;byline=0&amp;portrait=0" width="300" height="168" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe></div>
-</div>
-</div>
-</div>
-
-<!-- Product Range -->
-{% if settings.frontpage_collection != blank %}
-  <div class="container content" style="padding-top: 0px; padding-bottom: 0px">
-    <div name="products" class="sixteen columns">
-  		<div class="section clearfix">
-   			<h4 class="title" style="text-align: center; margin: 0;">View our product range</h4>
-          <p class="mobile_only_block" style="font-weight: 600; text-align: center;  color: #ff6666;">&larr; swipe to see more &rarr;</p>
-          <p class="desktop_only_block" style="font-weight: 600;  text-align: center;  color: #ff6666;">&larr; see more &rarr;</p>
-      </div>
-    </div>
-  </div>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick-theme.css"/>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
-<div class="container content" style="padding-top: 0px; padding-bottom: 0px">
-  <div class="responsive_slick">
-    {% assign collection = '' %}
-    {% assign products = collections[settings.frontpage_collection].products %}
-    {% assign products_per_row = settings.frontpage_products_per_row %}
-    {% include 'lw-product-loop' with settings.homepage_sidebar %}
-  </div>
-</div>
-<script>
-$(document).ready(function(){
-  $('.responsive_slick').slick({
-  dots: true,
-  infinite: true,
-  speed: 300,
-  slidesToShow: 4,
-  slidesToScroll: 2,
-  responsive: [
-    {
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        infinite: true,
-        dots: true
-      }
-    },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-  ]
-});
-});
-  </script>
-{% endif %}
-
-<!-- Injected Page content -->
-{% if settings.homepage2 != blank %}
-  </div>
-  <div class="homepage_content clearfix">
-    <div class="container">
-      <div class="sixteen columns">
-        <div class="section clearfix">
-          {{ pages[settings.homepage2].content }}
-        </div>
-      </div>
-    </div>
-  </div>
-
-<div class="container content" style="padding-top: 20px">
-{% endif %}
-
-<!-- Reviews Widget -->
-<div class="container content" style="padding-top:0 ;padding-top:0;margin-top: 20px;margin-bottom: 20px;" >
-<h4 style="text-align:center; margin: 0;">What people are saying</h4>
-  <p class="mobile_only_block" style="text-align: center;  font-weight: 600;  color: #ff6666;">&larr; swipe to see more &rarr;</p>
-  <p class="desktop_only_block" style="text-align: center;  font-weight: 600;  color: #ff6666;">&larr; see more &rarr;</p>
-<div class="responsive_slick">
-<div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/HarveyKarp.jpg?3140755961130202174" /><br>
-  <p style="width: 90%; padding-left: 10%;">"Little Lotus helps to regulate a baby’s temperature, which is something that can disturb sleep"
-  <br><strong style="color:#ee5555;">Dr Harvey Karp, author of Happiest Baby on the Block</strong></p>
-</div>
-<div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_1.png?2684358863475992551" /><br>
-  <p style="width: 90%; padding-left: 10%;">“I am on my third baby and this swaddle is the best! I love that the fabric is breathable, yet keeps my son warm. It also maintains its shape and does not bunch up or stretch”<br>
-    <strong style="color:#ee5555;">Wendy</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_2.png?5581746742390898225" /><br>
-  <p style="width: 90%; padding-left: 10%;">“When he is in his Little Lotus swaddle he stays asleep the entire night! Which means both baby and mommy get a good night's rest”<br>
- <strong style="color:#ee5555;">Malia</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_3.png?12040314176578082965" /><br>
-  <p style="width: 90%; padding-left: 10%;">“I'm a believer! It really seems to control her temperature super well. We've experienced increased hours of rest since putting Little Hailey in it”<br>
-  <strong style="color:#ee5555;">Jessica</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_4.png?12040314176578082965" /><br>
-  <p style="width: 90%; padding-left: 10%;">“Knowing the fabric will help keep her at the right temperature while I'm sleeping gives me great peace of mind”<br>
- <strong style="color:#ee5555;">Angela</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_5.png?12040314176578082965" /><br>
-  <p style="width: 90%; padding-left: 10%;">“It feels good knowing that by supporting Little Lotus, I am supporting their mission to save babies in developing countries”<br>
- <strong style="color:#ee5555;">Janet</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/Review_6.png?12040314176578082965"
- /><br>
-  <p style="width: 90%; padding-left: 10%;">“In her Little Lotus, she now rarely wakes up at night and is already sleeping eight to nine hours straight almost every night”<br>
-  <strong style="color:#ee5555;">Christine</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/TheresaL.JPG?17686819164195516417"
- /><br>
-  <p style="width: 90%; padding-left: 10%;">“I decided to try out the Lotus Baby blanket and he slept soundly for a straight 10 hours!”<br>
-  <strong style="color:#ee5555;">Theresa</strong></p>
-</div>
-  <div><img class="review-home-slick" src="https://cdn.shopify.com/s/files/1/1039/4208/files/BeverlyT_review.jpg?8565634867555883363"
- /><br>
-  <p style="width: 90%; padding-left: 10%;">“It really works! On a cold SF night, I check her body and it's nice and warm. On a hot SF night, I check her body and again it's nice and warm”<br>
-  <strong style="color:#ee5555;">Beverly</strong></p>
-</div>
-  <div><p style="width: 90%; padding-left: 10%; margin-top: 20%;">“My little one loves her Little Lotus Sleep Sac! Gorgeous print, so well made and so easy to use. She settles down as soon as I wrap her in it and sleeps so peacefully. Happiness for baby and mommy!”<br>
-  <strong style="color:#ee5555;">Diana &amp; Baby Esme</strong></p>
-</div>
-
-
-
-
-
-
-</div>
-</div>
-
-<!-- Reviews Stripe
-<H4 style="text-align: center;"><a href="/pages/moms-feedback"><span class="spr-badge" id="spr_badge_4080629574" data-rating="5.0">
-  <span style="color: #ff6666" class="spr-starrating spr-badge-starrating">
-    <i class="spr-icon spr-icon-star" style=""></i>
-    <i class="spr-icon spr-icon-star" style=""></i>
-    <i class="spr-icon spr-icon-star" style=""></i>
-    <i class="spr-icon spr-icon-star" style=""></i>
-    <i class="spr-icon spr-icon-star" style=""></i></span>
-  <span class="spr-badge-caption">View our Reviews</span>
-  </span></a></H4>
--->
-
-<!-- Community Section -->
-<div class="container content" style="padding-top:0 ;padding-top:0;margin-top: 40px;margin-bottom: 40px;" >
-	<h4 style="text-align:center;">Join our community</h4>
-  	<p style="text-align:center; padding-left: 10px; padding-right: 10px;">Follow Little Lotus to get recommendations and advice from other Little Lotus Parents</p>
-    <div class="two columns community offset-by-four ">
-   		<a href="https://www.facebook.com/lotusbaby" target="_blank">
-     	<img src="https://cdn.shopify.com/s/files/1/1039/4208/t/3/assets/social-one.png?11232755633868861340">
-    	<div class="ss-icon"><img src="https://cdn.shopify.com/s/files/1/1039/4208/files/fb.png?11743834068282923941"></div>
-      	</a></div>
-    <div class="two columns community">
-    	<a href="http://instagram.com/littlelotusbaby" target="_blank">
-		<img src="https://cdn.shopify.com/s/files/1/1039/4208/t/3/assets/social-two.png?1130064062019156062">
-        <div class="ss-icon"><img src="https://cdn.shopify.com/s/files/1/1039/4208/files/ig.png?11743834068282923941"></div>
-        </a></div>
-    <div class="two columns community">
-      	<a href="https://www.pinterest.com/littlelotusbaby/" target="_blank">
-		<img src="https://cdn.shopify.com/s/files/1/1039/4208/t/3/assets/social-three.png?1608571264368976440">
-        <div class="ss-icon"><img src="https://cdn.shopify.com/s/files/1/1039/4208/files/pin.png?11743834068282923941"></div>
-        </a></div>
-    <div class="two columns community ">
-    	<a href="https://twitter.com/littlelotusbaby" target="_blank">
-		<img src="https://cdn.shopify.com/s/files/1/1039/4208/t/3/assets/social-four.png?8389418677596590910">
-        <div class="ss-icon"><img src="https://cdn.shopify.com/s/files/1/1039/4208/files/twet.png?11743834068282923941"></div>
-      	</a></div>
-</div>
-
-
-
-</div>
-
-
-</div>
-{% endcomment %}
-
-<!-- Press references -->
-<div class="crafted">
-  <div class="container content" style="padding-top:0">
-    <div class="sixteen columns">
-      <a href="/pages/press">
-        {{ 'logos-blue.png' | asset_url | img_tag }}
-      </a>
- 	</div>
-  </div>
-</div>
 
 
 <!-- Blog Widget -->
