--- a/snippets/snippet-homepage--products.liquid
+++ b/snippets/snippet-homepage--products.liquid
@@ -1,5 +1,5 @@
 <div class="section-homepage--products">
-  <h1 class="section-title--hed"><span>Better Sleep Starts Here</span></h1>
+  <h1 class="section-title--hed section-title--background_flourish"><span>Better Sleep Starts Here</span></h1>
   <div class="container content">
     <div class="products-row">
       {% assign collection = '' %}
