resolving line-height issue

--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -450,8 +450,8 @@ picture,img { max-width: 100%; }
 }
 .section-homepage--module_two_column .section-title--hed span {
   display: block;
-  line-height: 1.25;
-  margin: 10px 0 0 0;
+  line-height: 1.5;
+  margin: 0;
   padding: 0;
   font-size: 40px;
 }
