--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -486,6 +486,36 @@ picture,img { max-width: 100%; }
 
 
 /**/
-.section-homepage--featured_in {
+.section-homepage--featured_in {}
 
+
+/**/
+.sub-footer {
+  background-color: transparent;
+}
+
+.sub-footer .section-title--lede {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.sub-footer a,
+.sub-footer a:visited {
+  font-weight: normal;
+}
+.sub-footer a,
+.sub-footer a:visited,
+.sub-footer .section-title--lede,
+.sub-footer .social_icons a,
+.sub-footer .social_icons a:hover,
+.sub-footer .social_icons a:active,
+.sub-footer .social_icons a:visited {
+  color: #8a8c8f;
+  font-weight: normal;
+}
+.sub-footer ul.social_icons {
+  text-align: left;
+}
+.sub-footer input#arlington-field-submit.arlington-field-submit {
+  background-color: #8a8c8f !important;
+  border: 1px solid #8a8c8f !important;
 }
