--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -273,6 +273,7 @@ var pageVariations = [
     </div>
   {% endif %}
 </div>
+{% endif %}
 
 <!-- Insta Widget -->
 {% if settings.instagram_widget %}
