--- a/snippets/snippet-banner--promo.liquid
+++ b/snippets/snippet-banner--promo.liquid
@@ -1,6 +1,6 @@
 <div class="promo-banner">
   <div class="container">
-    <p class="promo-text">10% off all Orders! | Code: <strong>TAKE10</strong> | Limited time only</p>
+    <p class="promo-text"><strong>Free Shipping On All U.S. Orders! Code: FREESHIP</strong></p>
     <div class="nav mobile_hidden">
       <ul class="menu">
         {% if shop.customer_accounts_enabled %}
