helping hand updated

--- a/snippets/snippet-homepage--helping_hand.liquid
+++ b/snippets/snippet-homepage--helping_hand.liquid
@@ -1,9 +1,8 @@
 <div class="container content section-homepage--helping_hand">
   <div class="eight columns alpha">
-    <picture class="section-image">
-      <source srcset="//placehold.it/520x214">
-      <img src="//placehold.it/520x214" alt="Hero Image">
-    </picture>
+    <span class="section-image">
+      <img src="{{ 'helping-hand.jpg' | asset_url }}" alt="Helping Hand" class="section-image">
+    </span>
   </div>
   <div class="content-container seven omega columns offset-by-one">
     <h1 class="section-title--hed">A Helping <span>Hand</span></h1>
